cython/blendish.pxd


    cdef struct BNDwidgetTheme:
        NVGcolor outlineColor
        NVGcolor itemColor
        NVGcolor innerColor
        NVGcolor innerSelectedColor
        NVGcolor textColor
        NVGcolor textSelectedColor
        int shadeTop
        int shadeDown

    cdef struct BNDnodeTheme:
        NVGcolor nodeSelectedColor
        NVGcolor wiresColor
        NVGcolor textSelectedColor
        NVGcolor activeNodeColor
        NVGcolor wireSelectColor
        NVGcolor nodeBackdropColor
        int noodleCurving

    cdef struct BNDtheme:
        NVGcolor backgroundColor
        BNDwidgetTheme regularTheme
        BNDwidgetTheme toolTheme
        BNDwidgetTheme radioTheme
        BNDwidgetTheme textFieldTheme
        BNDwidgetTheme optionTheme
        BNDwidgetTheme choiceTheme
        BNDwidgetTheme numberFieldTheme
        BNDwidgetTheme sliderTheme
        BNDwidgetTheme scrollBarTheme
        BNDwidgetTheme tooltipTheme
        BNDwidgetTheme menuTheme
        BNDwidgetTheme menuItemTheme
        BNDnodeTheme nodeTheme

    cpdef enum BNDtextAlignment:
        BND_LEFT
        BND_CENTER

    cpdef enum BNDwidgetState:
        BND_DEFAULT
        BND_HOVER
        BND_ACTIVE

    cpdef enum BNDcornerFlags:
        BND_CORNER_NONE
        BND_CORNER_TOP_LEFT
        BND_CORNER_TOP_RIGHT
        BND_CORNER_DOWN_RIGHT
        BND_CORNER_DOWN_LEFT
        BND_CORNER_ALL
        BND_CORNER_TOP
        BND_CORNER_DOWN
        BND_CORNER_LEFT
        BND_CORNER_RIGHT

    cpdef enum:
        BND_WIDGET_HEIGHT
        BND_TOOL_WIDTH
        BND_NODE_PORT_RADIUS
        BND_NODE_MARGIN_TOP
        BND_NODE_MARGIN_DOWN
        BND_NODE_MARGIN_SIDE
        BND_NODE_TITLE_HEIGHT
        BND_NODE_ARROW_AREA_WIDTH
        BND_SPLITTER_AREA_SIZE
        BND_SCROLLBAR_WIDTH
        BND_SCROLLBAR_HEIGHT
        BND_VSPACING
        BND_VSPACING_GROUP
        BND_HSPACING
